change js file name

--- a/index.html
+++ b/index.html
@@ -109,5 +109,6 @@
   <footer id="footer">
     <p>Copyright &copy; 2020 All rights reserved. Design by Patiparn Kongjaiman</p>
   </footer>
+  <script src="js/mainForWebsite.js"></script>
 </body>
 </html>
