change some html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <div class="port-img">
         <div class="port-box port-project1">
-          <a href="#"><img src="./img/introPic.jpg"></a>
+          <a href="#" target="_blank"><img src="./img/introPic.jpg"></a>
         </div>
         <div class="port-box port-project2">
           <p>Coming soon</p>
